--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ h1,h2,h3,p,div,nav,ul,li {
 	color:white;
 	cursor:pointer;
 }
-.disabled {
+.link-disabled {
 	color:rgba(255,255,255,0.1);
 }
 
@@ -136,7 +136,7 @@ h1,h2,h3,p,div,nav,ul,li {
 }
 
 /*HEADER*/
-.block-header {
+.header {
 	min-height:630px;
 	width:100%;
 	margin:0 auto;
@@ -154,83 +154,83 @@ h1,h2,h3,p,div,nav,ul,li {
 	background-color:inherit;
 }
 
-.block-header__menu {
+.header__menu {
 	display:flex;
 	flex-direction:row;
 	justify-content:space-between; 
 	align-items:center;
 	width:100%;
 }
-.block-header__menu-logo {
+.header__menu-logo {
 	flex-basis:10%;
 }
-.block-header__menu-main,
-.block-header__menu-personal {
+.header__menu-main,
+.header__menu-personal {
 	display:flex;
 	flex-direction:row; 
 	align-items:center;
 	flex-basis:45%;
 	list-style:none;
 }
-.block-header__menu-main {
+.header__menu-main {
 	justify-content:flex-start;
 	align-items:center;
 }
-.block-header__menu-personal {
+.header__menu-personal {
 	justify-content:flex-end;
 }
 
-.block-header__menu-main-link {
+.header__menu-main-link {
 	border-bottom:1px solid rgba(255,255,255,0.2);
 }
-.block-header__menu-main-link.current {
+.header__menu-main-link.current {
  background-color:rgba(240, 100, 65,1);
  border-radius:1em;padding:0.5em;
 }
 
-.block-header__menu-personal-link {
+.header__menu-personal-link {
 	background-color:rgba(255,255,255,0.1);
 	padding:0.5em 0.5em 0.5em 2em;
 	position:relative; 
 	border-radius:1em; 
 }
-.block-header__menu-personal-link:nth-child(1):before {
+.header__menu-personal-link:nth-child(1):before {
 	content:"\1F50D";
 	position:absolute;
 	left:0.8em;
 }
-.block-header__menu-personal-link:nth-child(2):before {
+.header__menu-personal-link:nth-child(2):before {
 	content:"\27A6";
 	position:absolute;
 	left:0.5em;
 }
-.block-header__menu-personal-link:nth-child(3):before {
+.header__menu-personal-link:nth-child(3):before {
 	content:"\2751";
 	position:absolute;
 	left:0.5em;
 }
 
-.block-header--info {
+.header--info {
 	flex-basis:100%;
 	align-items:stretch;
 	text-align:right;
 	vertical-align:top;
 	margin-left:auto;
 }
-.block-header--info>p {
+.header--info>p {
 	padding:0.1em 0;
 }
-.block-header--info>p:nth-child(2) {
+.header--info>p:nth-child(2) {
 	font-size:1.2em;
 }
 
-.block-header__title {
+.header__title {
 	text-align:center;
 	font-size:3.8em;
 	padding:4em 3.5em 0.5em;
 }
 /*PROMO*/
-.block-promo {
+.promo {
 	width:100%;
 	margin:1.5em auto;
 	display:flex;
@@ -239,7 +239,7 @@ h1,h2,h3,p,div,nav,ul,li {
 	align-items:stretch;
 	flex-wrap:wrap;
 }
-.block-promo__item {
+.promo__item {
 	flex-basis:46.7%;
 	display:flex;
 	flex-direction:column;
@@ -249,33 +249,33 @@ h1,h2,h3,p,div,nav,ul,li {
 	padding:0.5em 0.5em 1.5em;
 	border-radius:0.7em;
 }
-.block-promo__item:nth-child(2n+1) {
+.promo__item:nth-child(2n+1) {
 	margin-right:2.2%;
 } 
-.block-promo__item-title {
+.promo__item-title {
 	font-size:2em;
 	padding:0.5em;
 }
-.block-promo__item-text {
+.promo__item-text {
 	font-size:1em;
 	padding:0.5em;
 	vertical-align:top;
 }
-.block-promo__item-button {
+.promo__item-button {
 	flex-grow:0;
 	align-self:flex-end;
 	margin-top:1em;
 }
-.block-promo__item:nth-child(2) {
+.promo__item:nth-child(2) {
 	background:url("../img/pattern-1.jpg") repeat;
 	background-color:inherit;
 }
-.block-promo__item:nth-child(3) {
+.promo__item:nth-child(3) {
 	background:url("../img/pattern-2.jpg") repeat;
 	background-color:inherit;
 }
 /*CATALOG*/
-.block-catalog__items {
+.catalog__items {
 	width:100%;
 	display:flex;
 	flex-direction:row;
@@ -286,7 +286,7 @@ h1,h2,h3,p,div,nav,ul,li {
 	list-style:none;
 }
 
-.block-catalog__item {
+.catalog__item {
 	flex-basis:22.2%;
 	display:flex;
 	flex-direction:column;
@@ -296,13 +296,13 @@ h1,h2,h3,p,div,nav,ul,li {
 	position:relative;
 	margin-left:2.2%;
 }
-.block-catalog__item-img {
+.catalog__item-img {
 	border-radius:50%;
 	width:100%;
 	margin:2px auto;
 	text-align:center;
 }
-.block-catalog__item-price {
+.catalog__item-price {
 	position:relative;
 	top:-1em;
 	left:1em;
@@ -310,7 +310,7 @@ h1,h2,h3,p,div,nav,ul,li {
 	font-size:2.2em;
 	font-weight:bold;
 }
-.block-catalog__item-name {
+.catalog__item-name {
 	margin:-1.5em 0 0;
 	padding:0.5em;
 	text-align:center;
@@ -318,7 +318,7 @@ h1,h2,h3,p,div,nav,ul,li {
 	color:white;	
 }
 
-.block-catalog__item:before {
+.catalog__item:before {
 	content:"";
 	position:absolute;
 	opacity:0.2;
@@ -333,7 +333,7 @@ h1,h2,h3,p,div,nav,ul,li {
 	border-radius:0.7em;
 	padding-bottom:50px;
 }
-.block-catalog__item:after {
+.catalog__item:after {
 	content:"Быстрый просмотр";
 	display:none;
 	position:absolute;
@@ -351,18 +351,18 @@ h1,h2,h3,p,div,nav,ul,li {
 	z-index:2;
 	cursor:pointer;
 }
-.block-catalog__item:hover.block-catalog__item:before {
+.catalog__item:hover.catalog__item:before {
 	display:inline-block;
 	z-index:1;
 }
 
-.block-catalog__item:hover.block-catalog__item:after {
+.catalog__item:hover.catalog__item:after {
 	display:inline-block;
 	box-shadow:1px 13px 17px 1px rgba(0,0,0,0.5);
 	opacity:0.8;
 }
 /*ABOUT*/
-.block-about {
+.about {
 	width:95.6%;
 	margin:1.5em auto;
 	border-radius:0.7em;
@@ -378,18 +378,18 @@ h1,h2,h3,p,div,nav,ul,li {
 	background-color:inherit;
 	color:black;
 }
-.block-about__title {
+.about__title {
 	font-size:2em;
 	flex-basis:100%;
 }
-.block-about__item {
+.about__item {
 	font-size:1em;
 	padding-left:4em;
 	flex-basis:50%;
 	margin-top:1em;
 	position:relative;
 }
-.block-about__item:before {
+.about__item:before {
 	content:"";
 	position:absolute;
 	left:0.5em;
@@ -399,20 +399,20 @@ h1,h2,h3,p,div,nav,ul,li {
 	border-box:2em transparent solid, 1px black solid;
 	border-radius:50%;
 }
-.block-about__item:nth-child(2):before {
+.about__item:nth-child(2):before {
 	content:"\2603";
 }
-.block-about__item:nth-child(3):before {
+.about__item:nth-child(3):before {
 	content:"\2706";
 }
-.block-about__item:nth-child(4):before {
+.about__item:nth-child(4):before {
 	content:"\2042";
 }
-.block-about__item:nth-child(5):before {
+.about__item:nth-child(5):before {
 	content:"\2746";
 }
 /*OTHER*/
-.block-other {
+.other {
 	width:100%;
 	margin:1.5em auto;
 	display:flex;
@@ -421,7 +421,7 @@ h1,h2,h3,p,div,nav,ul,li {
 	align-items:stretch;
 	flex-wrap:wrap;
 }
-.block-other__item {
+.other__item {
 	margin-left:2.2%;
 	flex-basis:46.7%;
 	display:flex;
@@ -435,13 +435,13 @@ h1,h2,h3,p,div,nav,ul,li {
 	background-color:white;
 	color:black;
 }
-.block-other__item:nth-child(2n) {
+.other__item:nth-child(2n) {
 	margin-right:2.2%}
-.block-other__item-new {
+.other__item-new {
 	background:url("../img/other-1.png") right bottom no-repeat, white;
 	background-size:50% 100%;
 }
-.block-other__item-new-title {
+.other__item-new-title {
 	display:inline-block;
 	max-width:60%;
 	text-align:left;
@@ -450,7 +450,7 @@ h1,h2,h3,p,div,nav,ul,li {
 	vertical-align:top;
 	color:inherit;
 }
-.block-other__item-new-details {
+.other__item-new-details {
 	display:inline-block;
 	max-width:60%;
 	color:black;
@@ -462,31 +462,31 @@ h1,h2,h3,p,div,nav,ul,li {
 	color:inherit;
 	cursor:pointer;
 }
-.block-other__item-subscribe {
+.other__item-subscribe {
 	font-size:1em;
 	vertical-align:top;
 	flex-direction:row;
 	flex-wrap:wrap;
 }
-.block-other__item-subscribe-text {
+.other__item-subscribe-text {
 	font-size:1em;
 	padding:0.5em;
 	flex-basis:100%;
 }
-.block-other__item-subscribe-email {
+.other__item-subscribe-email {
 	font-size:1em;
 	padding:0.5em;
 	flex-basis:70%;
 	border-radius:0.7em;
 	border:1px lightgrey solid;
 }
-.block-other__item-subscribe-button {
+.other__item-subscribe-button {
 	font-size:1em;
 	padding:0.5em;
 	flex-basis:25%;
 }
 /*MAP*/
-.block-map {
+.map {
 	display:flex;
 	flex- direction:column;
 	justify-content:flex-end;
@@ -497,7 +497,7 @@ h1,h2,h3,p,div,nav,ul,li {
 	background-size:cover;
 	background-color:inherit;
 }
-.block-map__info {
+.map__info {
 	width:250px;
 	height:280px;
 	background-color:white;
@@ -507,23 +507,23 @@ h1,h2,h3,p,div,nav,ul,li {
 	display:inline-block;
 	border-radius:0.7em;
 }
-.block-map__info-p {
+.map__info-p {
 	margin:0.5em;
 	text-align:left;
 }
-.block-map__info-p:nth-child(n) {
+.map__info-p:nth-child(n) {
 	font-size:0.9em;
 }
-.block-map__info-p:nth-child(2n) {
+.map__info-p:nth-child(2n) {
 	font-size:1em;
 	font-weight:bold;
 }
-.block-map__info-feedback {
+.map__info-feedback {
 	margin:0.5em auto;
 }
 
 /*FOOTER*/
-.block-footer {
+.footer {
 	min-height:50px;
 	display:flex;
 	flex-direction:row;
@@ -532,7 +532,7 @@ h1,h2,h3,p,div,nav,ul,li {
 	align-items:stretch;
 	font-size:0.8em;
 }
-.block-footer__part {
+.footer__part {
 	display:flex;
 	flex-direction:row;
 	flex-wrap:wrap;
@@ -543,7 +543,7 @@ h1,h2,h3,p,div,nav,ul,li {
 	padding:1.5em;
 }
 
-.block-footer__social-item {
+.footer__social-item {
 	display:inline-block;
 	margin-left:0.5em;
 	width:32px;
@@ -556,10 +556,10 @@ h1,h2,h3,p,div,nav,ul,li {
 	cursor:pointer;
 }
 
-.block-footer__menu { 
+.footer__menu { 
 	flex-basis:50%;	
 } 
-.block-footer__menu-link {
+.footer__menu-link {
 	display:inline-block;
   flex-basis:40%;
 	text-decoration:underline;
@@ -568,19 +568,19 @@ h1,h2,h3,p,div,nav,ul,li {
 	margin:0 0.5em;
  	position:relative;
  }
-.block-footer__menu-link:nth-child(2) {
+.footer__menu-link:nth-child(2) {
 	font-weight:bold;
 }
-.block-footer__menu-link:nth-child(2):before {
+.footer__menu-link:nth-child(2):before {
 	content:"\2764";
 	position:absolute;
 	left:-1.2em;
 }
-.block-footer__right-html-logo {
+.footer__right-logo {
 	cursor:pointer;
 }
 
-.block-catalog-header {	
+.catalog-header {	
 	padding:1em;
 	opacity:0.7;
 	display:flex;
@@ -595,12 +595,12 @@ h1,h2,h3,p,div,nav,ul,li {
 }
 
 @media screen and (max-width:1200px) {
-	.block-header__title {
+	.header__title {
 		font-size:font-size:3.8em;
 }
 }  
 @media screen and (max-width:900px)  {
-	.block-header__title {
+	.header__title {
 		font-size:font-size:2.5em;
 }
 }
